--- a/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
@@ -11,50 +11,65 @@
 			<div class="containerWapper">
 				<h1 class="blue">咨询池</h1>
 				<p class="orange">这里呈现的是您的法律意见已通过评审、但客户尚未委托的案件。</p>
-				<section class="col-md-12 col-sm-12 writeInfo space20">
+				<section class="col-md-12 col-sm-12 writeInfo space20 px-0">
 					<div class="row">
-						<div class="col-md-12 col-sm-12 mybox">
+						<div class="col-md-4 col-sm-12">
+							<div class="ulCell laywer_right">
+								<ul class="nav nav-tabs" role="tablist">
+									<li role="presentation" class="active">
+										<a th:href="@{/lawyer/case_pool(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}" role="tab">免费法律咨询 
+											<span>(</span><span class="value">4</span><span>)</span>
+										</a>
+									</li>
+									<li role="presentation" class="">
+										<a href="#" role="tab" id="getReservation">电话咨询</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-8 col-sm-12 mybox">
 							<ul class="writeInfoText ulCell myCell">
 								<div class="row">
 									<div class="col-md-6">
 										<div class="row">
-											<div class="col-md-2 col-sm-3 sLabel mycaseLabel">
+											<div class="col-md-3 col-sm-3 sLabel mycaseLabel">
 												<label>案件类型：</label>
 											</div>
-											<div class="col-md-10 col-sm-10">
+											<div class="col-md-9 col-sm-9">
 												<select class="form-control" id="falltypusBlock">
 													<option th:value="-1">选择从属案件类型</option>
-													<option th:each="belongsToFalltypus : ${firstLevelFalltypus}" 
-															th:id="${belongsToFalltypus.id}" 
-															th:value="${belongsToFalltypus.id}" 
-															th:text="${belongsToFalltypus.name}"></option>
+													<option
+														th:each="belongsToFalltypus : ${firstLevelFalltypus}"
+														th:id="${belongsToFalltypus.id}"
+														th:value="${belongsToFalltypus.id}"
+														th:text="${belongsToFalltypus.name}"></option>
 												</select>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-3">
+									<div class="col-md-6">
 										<div class="row">
-											<div class="form-group col-md-2 col-sm-2 sLabel mycaseLabel">
+											<div class="form-group col-md-3 col-sm-3 sLabel mycaseLabel">
 												<label>最近：</label>
 											</div>
-											<div class="form-group col-md-7 col-sm-7">
+											<div class="form-group col-md-5 col-sm-5">
 												<select class="form-control">
 													<option value="">3</option>
 													<option value="">10</option>
 													<option value="">15</option>
 												</select>
 											</div>
-											<div class="form-group col-md-3 col-sm-3 sLabel">
+											<div class="form-group col-md-4 col-sm-4 sLabel">
 												<label>天</label>
 											</div>
 										</div>
 									</div>
 								</div>
 								<div class="row mycaseCheckBox">
-									<label>
+									<label> 
 										<input type="checkbox" id="viewUnRead" />只看未读的竞标
 									</label>
 								</div>
+
 								<div class="row">
 									<div class="col-md-12 col-sm-12 btnNext btnSearch mycasebtnSearch">
 										<button type="button" class="btn btn-law btn-lg" id="searchConsultingWithFilter">查询</button>
@@ -62,29 +77,34 @@
 								</div>
 							</ul>
 							<div id="consultingBlock" th:fragment="consultingBlock-fragment">
-								<a  th:if="${not #lists.isEmpty(pageableData)}"
+								<a th:if="${not #lists.isEmpty(pageableData)}"
 									th:each="freeConsulting : ${pageableData}"
-									th:href="@{/user/case/lawyer/consulting/viewDetail/{id}(id=${freeConsulting.id})}">
+									th:attr="href=(${freeConsulting.contactPhone eq null}) ? '/user/case/lawyer/consulting/viewDetail/' + ${freeConsulting.id} : '#'">
 									<ul class="writeInfoText ulCell myCell mb-2">
 										<li>
 											<span>案件编号 :</span>
 											<span th:text="${freeConsulting.id}"></span>
 										</li>
-										<li>
+										<li th:if="${freeConsulting.location ne null}">
 											<span>起诉地点 :</span>
 											<span th:text="${freeConsulting.location}"></span>
+										</li>
+										<li th:if="${freeConsulting.contactPhone ne null}">
+											<span>当事人联系方式 :</span>
+											<span th:text="${freeConsulting.contactPhone}"></span>
 										</li>
 										<li>
 											<span>案件提交时间 :</span>
 											<span th:text="${freeConsulting.createAt}"></span>
 										</li>
-										<li>
+										<li th:if="${freeConsulting.falltypusType ne null}">
 											<span>案件类型 :</span>
 											<span th:text="${freeConsulting.falltypusType}"></span>
 										</li>
 									</ul>
 								</a>
-								<ul th:if="${#lists.isEmpty(pageableData)}" class="writeInfoText ulCell myCell">未找到相关记录</ul>
+								<ul th:if="${#lists.isEmpty(pageableData)}" class="writeInfoText ulCell myCell">未找到相关记录
+								</ul>
 								<div th:if="${not #lists.isEmpty(pageableData)}" th:include="fragments/page :: paginationbar" th:remove="tag"></div>
 							</div>
 						</div>
@@ -114,12 +134,34 @@
 				console.log(self.value)
 				ids.push($(this).find("option:selected").attr("id"))
 			})
-			
-			$("#searchConsultingWithFilter").on("click", function() {
+
+			$("#getReservation").on("click", function(e) {
+				e.preventDefault()
 				$.ajax({
 					type : 'GET',
-					url : "/user/case?parentType=" + ids + "&caseType=0&feedbackCount=10&status="+status5+"&" + (viewUnRead == 'N' ? "isRead=N" : "")
-							+ "&searchFrom=SEARCH_FROM_LAWYER_CASEPOOL&requestFrom=" + location.pathname,
+					url : "/user/reservation?status=0&searchFrom=SEARCH_FROM_LAWYER_CASEPOOL&requestFrom=" + location.pathname,
+					success : function(data) {
+						console.log(data)
+						$('#consultingBlock').html(data);
+					},
+					error : function(error) {
+						console.log(error)
+					}
+				});
+			})
+			
+			$("#searchConsultingWithFilter").on("click",function() {
+				$.ajax({
+					type : 'GET',
+					url : "/user/case?parentType="
+							+ ids
+							+ "&caseType=0&feedbackCount=10&status="
+							+ status5
+							+ "&"
+							+ (viewUnRead == 'N' ? "isRead=N"
+									: "")
+							+ "&searchFrom=SEARCH_FROM_LAWYER_CASEPOOL&requestFrom="
+							+ location.pathname,
 					success : function(data) {
 						console.log(data)
 						$('#consultingBlock').html(data);
