--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step4.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step4.html
@@ -156,9 +156,9 @@
             });
 	    })
 
-	    $("#submitLawsuit").on("click", (e) => {
-	        e.preventDefault()
-	        $.ajax({
+	    
+	    $("#optionalQAForm").on("click", "button[id='submitLawsuit']", function () {
+	    	$.ajax({
 	            type: 'POST',
 	            url: '/public/case',
 	            data: JSON.stringify({
