--- a/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
@@ -105,7 +105,7 @@
 								</a>
 								<ul th:if="${#lists.isEmpty(pageableData)}" class="writeInfoText ulCell myCell">未找到相关记录
 								</ul>
-								<div th:if="${not #lists.isEmpty(pageableData)}" th:include="fragments/page :: paginationbar" th:remove="tag"></div>
+<!-- 								<div th:if="${not #lists.isEmpty(pageableData)}" th:include="fragments/page :: paginationbar" th:remove="tag"></div> -->
 							</div>
 						</div>
 					</div>
