--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step3.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step3.html
@@ -86,8 +86,7 @@
 	<div th:replace="fragments/footer :: footer"></div>
 	<script type="text/javascript">
 		$(function() {
-			$("#submitFreeConsulting").on("click", (e) => {
-				e.preventDefault()
+			$("#submitFreeConsulting").on("click", function(){
 				$.ajax({
 					type : 'POST',
 					url : '/public/case',
