更新城市选择UI

--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
@@ -50,8 +50,11 @@
 							<div class="form-group col-md-4 col-sm-12">
 								<button id="getCity" type="button" class="btn btn-dark btn-law" data-toggle="modal" data-target="#selectCity">选择您的所在地</button>
 							</div>
-							<span class="form-group col-md-2 col-sm-12" id="selectedCity" />
 						</div>
+					</div>
+					<div class="row">
+						<span class="form-group col-md-2 col-sm-12" id="selectedCity">
+						</span>
 					</div>
 					<div class="row">
 						<div class="col-md-12 col-sm-12 btnNext">
