--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
@@ -40,8 +40,9 @@
 							<button id="getCity" type="button" class="btn btn-dark btn-law"
 								data-toggle="modal" data-target="#selectCity">选择您的所在地</button>
 						</div>
+					</div>
+					<div class="row">
 						<span class="form-group col-md-2 col-sm-12" id="selectedCity">
-
 						</span>
 					</div>
 					<div class="row">
