--- a/fxs-platform-web/src/main/resources/templates/fragments/footer.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,9 @@
 <footer class="fixed-bottom" th:fragment="footer">
-    <ul class="list-group">
-      <li>
-        © 2013-2017, shuai.com, Inc. All Rights Reserved. 上海小帅信息科技有限公司 沪ICP备14006851号-2
-      </li>
-      <li>地址：上海市静安区XXXXXXXXX</li>
-      <li></li>
-      <li>沪公网安备 31011002000396号</li>
-    </ul>
+	<ul class="list-group">
+		<li>© 2013-2017, shuai.com, Inc. All Rights Reserved.
+			上海小帅信息科技有限公司 沪ICP备14006851号-2</li>
+		<li>地址：上海市静安区XXXXXXXXX</li>
+		<li></li>
+		<li>沪公网安备 31011002000396号</li>
+	</ul>
 </footer>
