--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -52,7 +52,10 @@
 										th:each="inquiry,iterState : ${caseDetailInfo.detailedInquiries}">
 										<li>
 											<span th:text="'第'+ ${iterState.count} + '次追问: '"></span>
-											<span th:text="${inquiry}"></span>
+											<span th:text="${inquiry[0]}"></span>
+											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+											<span th:text="'律师回复:'"></span>
+											<span th:text="${inquiry[1] eq null ? '暂无回复' : inquiry[1]}"></span>
 										</li>
 									</ul>
 								</li>
