--- a/fxs-platform-web/src/main/resources/templates/userSignIn.html
+++ b/fxs-platform-web/src/main/resources/templates/userSignIn.html
@@ -37,10 +37,10 @@
 						</div>
 					</div>
 					<div class="form-group row">
-					  <div class="col-sm-7">
+					  <div class="col-7">
 						<input type="text" class="form-control" placeholder="请输入验证码" th:name="imageCode" id="image_code"></input>
 					  </div>
-					  <div class="col-sm-5 pl-0 d-flex align-items-center">
+					  <div class="col-5 pl-0 d-flex align-items-center">
 						<div class="validate-code pull-left" style="background-color: #fff;">
 						  <img th:id="imageVerificationCode" th:src="@{/code/image}"></img>
 						</div>
