--- a/fxs-platform-web/src/main/resources/static/css/css.css
+++ b/fxs-platform-web/src/main/resources/static/css/css.css
@@ -2,12 +2,6 @@ body{
     background-color: #eee;
     font-family: 'Helvetica Neue','Helvetica','Arial','Hiragino Sans GB','WenQuanYi Micro Hei','Microsoft Yahei',sans-serif;
 }
-.topBar{ position: fixed; z-index: 10;
-    background-image: -moz-linear-gradient(left, #333F5F , #9D7961); 
-    background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #333F5F ), color-stop(1,#9D7961)); 
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333F5F ', endColorstr='#9D7961', GradientType='0');  
-    
-}
 h1 {
     font-size: 26px;
     font-weight: 400;
@@ -19,12 +13,50 @@ a{
 .orange{
     color: #ab1422
 }
+.scroll-y{
+  overflow-y: auto
+}
+.scroll-y-80{
+  max-height: 80px;
+}
+.marginTop30{
+    margin-top: 50px;
+}
+.space20{ 
+    margin: 3em 0
+}
+label {
+    font-weight: 100;
+}
+.fl{
+    float: left;
+}
+.fr{
+    float: right;
+}
+.clearboth{
+    clear: both;
+}
+ul li{
+    list-style:none;
+}
+.ft12{
+    font-size:12px
+}
+
+/*header section*/
+.topBar{ position: fixed; z-index: 10;
+    background-image: -moz-linear-gradient(left, #333F5F , #9D7961); 
+    background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #333F5F ), color-stop(1,#9D7961)); 
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333F5F ', endColorstr='#9D7961', GradientType='0');  
+    
+}
+
 .img-responsive{
     background: url(../img/mainBg.png) no-repeat fixed center center;
     background-size: cover;
     height: 100%;
 }
-
 .loginBox a.nav-link{
     color:white;
     font-size: 12px;
@@ -53,9 +85,7 @@ a{
 .headerRight .mainNav li{
     margin: 5px 0;
 }
-.page-404-error{
-    color: #665b60;
-}
+
 .dropdown-menu .dropdown-item {
     color: #856404;
 }
@@ -66,47 +96,21 @@ a{
 .topBar .dropdown-menu{box-shadow: 1px 3px 6px 0 #8E97AC;}
 
 .mapId{background: url(../img/map.png) no-repeat; color: #fff; font-size: 12px; padding-left: 18px;margin-top: 20px;}
-
-.scroll-y{
-  overflow-y: auto
-}
-.scroll-y-80{
-  max-height: 80px;
-}
-
-
+/*header section end*/
 
 .containerWapper{
-    /*background-color: #fff;*/
     float: left;
     width: 100%;
     z-index: 1;
-    /*min-height: 550px;*/
     padding: 0 5% 84px;
 }
-.form-control{
-    font-size: 16px;
-    font-weight: 100;
-}
 
-
-.marginTop30{
-    margin-top: 50px;
-}
 .mainPart .container .containerWapper h1{
     margin-top: 15px;
     text-align: center;
 }
-footer{
-    z-index: 999;
-    float: left;
-    width: 100%;
-}
-.headerline .loginBox .loginBox li{
-    width: auto;
-    float: left;
-}
-/*---counseling_free----*/
+
+/*---counseling_free step2,step3----*/
 .introcouPhone .btnSquare a{
     font-size: 16px;
     font-weight: 100;
@@ -118,9 +122,6 @@ footer{
     padding: 15px 0;
 }
 
-.btnNext button.haveA{
-    margin-bottom: 10px;
-}
 .select-city-section{
     margin-bottom: 20px;
 }
@@ -128,7 +129,6 @@ footer{
     color: #856404;
     padding-left: 5px;
 }
-/*---counseling_free_step2----*/
 .step2Step{
     margin: 20px 150px 90px;
     background-color: #fff;
@@ -136,39 +136,28 @@ footer{
     padding: 20px;
     border-radius: 8px;
 }
-.sBtn h3{
-    font-weight: 100;
-}
 h4.gray {
     font-weight: 100;
+    font-size: 12px;
+    color: #9B9B9B;
 }
-label {
-    font-weight: 100;
-}
-
-/*---counseling_free_step3----*/
 .writeInfoRightTitle li{
     font-size: 14px;
     font-weight: 400;
     padding: 15px 0;
 }
+.writeInfoRightItem{padding: 2em 1em;}
 .writeInfoRightItem li{
-    margin: 10px 0;
-    font-size: 12px;
-}
-.writeInfoRightItem{
-    padding: 10px 20px;
-}
-.writeInfo .row .writeInfoRight{
-    min-height: 200px;
-}
-.step3 .form-control{
-    background: none;
+    background: url(../img/icon_ok.png) no-repeat center left; 
+    padding-left:30px;
+    color:#58627C;
+    margin:0.5em 0;
+    font-size: 14px;
 }
 .btnNext a.seeMore{
     margin: 0 auto 10px;
 }
-
+/*---counseling_free step2,step3 end----*/
 
 .lawsuit-content{
     margin-top: 30px;
@@ -176,18 +165,6 @@ label {
 
 
 /*---login----*/
-.login-logo{
-    width: 230px;
-    margin: 0 auto;
-}
-.loginInput .form-group .form-control{
-    background: none;
-}
-.login-loginBTN{
-    color: #fff;
-    padding:.5rem 3rem;
-}
-
 .signupBox{
     width: 70%;
     background-color: #fff;
@@ -196,7 +173,7 @@ label {
     border: 1px solid #fff;
 }
 .signupBox .form-group{
-    margin-bottom: .5rem;
+    margin-bottom: .3rem;
 }
 .login-header{
     display: block;
@@ -210,30 +187,8 @@ label {
 .login-loginBTN:hover{
     color: #fff;
 }
-.loginInput .form-group .form-controlBG{
-    background: url(../img/arrow.png) no-repeat right #fff;
-}
-.LawsignupBox{
-    padding-top: 0;
-    margin-top: 0;
-}
-.loginlaw{
-    margin-top: 6%;
-}
-.loginlawLeft{
-    margin-top: 6%;
-}
-.loginBGWhite{
-    background-color: #fff;
-}
-/*---index----*/
-
-
 .mapId{
     margin-left: 20px;
-}
-footer.indexFooter{
-    background-color: transparent;
 }
 .logoLine{
     margin: 10px 0;
@@ -371,146 +326,6 @@ footer.indexFooter{
 }
 
 
-
-/*----兼容性----*/
-@media screen and (min-width: 1200px) {
-    .container {
-        max-width: 1440px;
-    }
-}
-@media screen and (max-width: 768px) {
-    .mainPart{
-        padding-top: 60px;
-    }
-    .introcouPhone ul.col-md-6,
-    .introcouPhone ul.col-md-4,
-    .writeInfo div.col-md-10,
-    .step2Step ul.ui-choose li.col-md-5{
-        max-width: 100%;
-        flex: 0 0 100%;
-    }
-    .writeInfo div.col-md-2{
-        display: none;
-    }
-    .feed .box1 {
-        width: 500px;
-    }
-    .logoLine img{
-        width: 70%;
-    }
-    .step2Step div.col-md-12{
-        margin-right: -15px;
-        width: 100%;
-        padding-right: 0;
-    }
-}
-@media screen and (max-width: 425px) {
-    .col-md-4 .logoLine img{
-        width: 40%
-    }
-    .mapId{
-        float: right;
-        margin-top: 10px;
-    }
-    .mainPart {
-        padding-top: 120px;
-    }
-    .breadcrumb{
-        display: none;
-    }
-    .mainPart .container .containerWapper h1 {
-        margin-top: 10%;
-    }
-    .step2Step .form-group{
-        width: 87%;
-        height: 40px;
-        margin-bottom: 5px;
-    }
-    .step2Step .sLabel{
-        width: 5%;
-        padding: 6px 0;
-    }
-    .introcouPhone .form-control{
-        margin-top: 0;
-    }
-    .mycasePart{
-        padding-top: 50px;
-    }
-    .topBar .col-md-3{
-        width: 40%;
-        padding: 8px 0 5px;
-    }
-    .topBar .col-md-3 img{
-        width: 100%;
-    }
-    .topBar .col-md-9{
-        width: 60%;
-    }
-    .mainNav{
-        padding-bottom: 13px;
-    }
-    .space20{
-        margin: 20px 0;
-    }
-    .col-md-9 ul.mainNav li:first-child{
-        margin-top: 10px;
-    }
-    .step2Step{
-        margin-top: 30px;
-    }
-    .caseBox ul{
-        padding-left: 5px;
-    }
-    .writeInfoText .listTitle td span{
-        display: block;
-        margin: 3px 0;
-    }
-    .writeInfoText .listTitle td:nth-child(2){
-        display: none;
-    }
-    .tableBox td{
-        display: block;
-    }
-    .btnNext button{
-        display: block;
-        float: left;
-    }
-    .lawyer2button{
-        margin: 0;
-        padding: 0;
-    }
-    .mybox .btnSearch button{
-        margin: 0 27px;
-    }
-    footer .list-group{
-        padding: 0 30px;
-    }
-    .empty {
-        margin: 10em 0 0;
-    }
-    .lawsuit-content h3.heading{
-        padding: 0 0 20px;
-    }
-    .lawsuit-content {
-        padding-bottom: 7em;
-    }
-    .feed .box1 {
-        width: 260px;
-    }
-    .btnNext button.haveA {
-        margin-left: 20%;
-    }
-}
-
-.fl{float: left;}
-.fr{float: right;}
-.clearboth{clear: both;}
-ul li{list-style:none;}
-.ft12{font-size:12px}
-
-
-
-
 /* ------------------------------------------------------------------------------------
 SEARCH       */
 
@@ -634,7 +449,7 @@ neiyene */
 .breadcrumb li a{color:#856404;background: url(../img/icon_next.png) no-repeat 94% 50%; padding-right: 20px;}
 
 
-.space20{ margin: 3em 0}
+
 .mainPart .container h1.blue{
     color: #721c24;
     text-align: center;
@@ -642,7 +457,7 @@ neiyene */
 .sBtn h3{font-size: 16px;color: #58627C; font-weight: 400;}
 .sBtn .btnSquare a{font-size: 16px;}
 .space10{margin-top: 2em}
-h4.gray{font-size: 12px;color: #9B9B9B;}
+
 .introcouPhone  .cur a{ color: #fff}
 
 .btnNext button{
@@ -675,8 +490,7 @@ h4.gray{font-size: 12px;color: #9B9B9B;}
 .writeInfoRightTitle li{font-size: 28px;color: #FFFFFF; text-align: center; margin-left: 0px; font-weight:200; padding:30px 0;}
 .phoneIcon{background: url(../img/phone.png) no-repeat; z-index:59999; display:block; height:60px; width:60px; 
     position: absolute; top: 25%;left: 42%;}
-.writeInfoRightItem{padding: 2em 1em;}
-.writeInfoRightItem li{background: url(../img/icon_ok.png) no-repeat center left; padding-left:30px;color:#58627C;margin:0.5em 0 }  
+
 .sLabel{ padding: 15px 0}
 /* ------------------------------------------------------------------------------------
 lawsuit      */
@@ -703,18 +517,14 @@ login      */
 #validate-code-refresh{
     cursor: pointer;
 }
-.signupBox .form-group input{border:none;border-bottom: 1px solid #ccc; border-radius: 0em}
+
 .signupBox h3{ font-weight: 200; ; color: #CFB87E;}
 .signupTitle{text-align: center;display: block; margin: 0.5em 0 1em;}
 .signupBox .control-label{    border: 1px solid #CFB87E;
     border-radius: 18px;
     text-align: center;color: #CFB87E; font-size: 12px; padding:8px 10px;}
 .signupBox .control-label:hover{ text-decoration: none;}
-.signupBox button{background-color: #CFB87E;
-    border-color: #CFB87E;
-    border-radius: 5rem;
-    font-size: 16px;
-    color: #FFFFFF;  cursor: pointer;}
+
  .signupBox .btn_cancel{ margin-right: 40px; background: #ccc; border:1px solid #ccc;}   
 .signupBox .fpw{ font-size: 12px;color: #999}
 .signupBox .fpw a{text-align: right;    display: block;}
@@ -737,7 +547,7 @@ login      */
 
 /* ------------------------------------------------------------------------------------
 laywer login      */
-.img-lawywerSign{background: url(../img/laywer_bg.png) no-repeat top center;background-size:100% auto;}
+.img-lawywerSign{background: url(../img/laywer_bg.png) no-repeat top center;}
 .img-lawywerSign  .lawsuit-content a{ margin: 10px 30px;}
 
 /* ------------------------------------------------------------------------------------
@@ -785,6 +595,10 @@ laywer center          */
 .writeInfo .row .caseBox .gray{ color: #999;}
 .tableBox{}
 
+/*404 page*/
+.page-404-error{
+    color: #665b60;
+}
 /*pagination component*/
 .page-link{
     color: #716160;
@@ -796,7 +610,12 @@ laywer center          */
     background-color: #e9ecef;
     border-color: #ddd;
 }
+
 /*button component*/
+.login-loginBTN{
+    color: #fff;
+    padding:.5rem 3rem;
+}
 .btn-law {
     color: #fff;
     background-color: #806961;
@@ -807,6 +626,15 @@ laywer center          */
     background-color: #5b5560;
     border-color: #5b5560;
 }
+.signupBox button{
+    background-color: #CFB87E;
+    border-color: #CFB87E;
+    border-radius: 5rem;
+    font-size: 16px;
+    color: #FFFFFF;  
+    cursor: pointer;
+}
+/*button component*/
 
 /*modal component*/
 .modal-title {
@@ -814,6 +642,16 @@ laywer center          */
 }
 
 /*input component*/
+.signupBox .form-group input,
+.signupBox .form-group select{
+    border:none;
+    border-bottom: 1px solid #ccc; 
+    border-radius: 0em
+}
+.form-control{
+    font-size: 16px;
+    font-weight: 100;
+}
 .form-group .form-control{
     border-radius: 4px;
     appearance:none;
@@ -823,9 +661,169 @@ laywer center          */
 .form-control:focus {
   border-color: #806961;
   box-shadow: none;
-  /*box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);*/
 }
 
 /*footer*/
+footer.indexFooter{
+    background-color: transparent;
+}
 footer{background-color: #14152D; text-align: center; color: #7C93AD; font-size: 12px;padding: 1em 0;}
 footer .list-group li{ line-height:20px;}
+
+/*----兼容性----*/
+@media screen and (min-width: 1200px) {
+    .container {
+        max-width: 1440px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .mainPart{
+        padding-top: 60px;
+    }
+    .introcouPhone ul.col-md-6,
+    .introcouPhone ul.col-md-4,
+    .writeInfo div.col-md-10,
+    .step2Step ul.ui-choose li.col-md-5{
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+    .writeInfo div.col-md-2{
+        display: none;
+    }
+    .feed .box1 {
+        width: 500px;
+    }
+    .logoLine img{
+        width: 70%;
+    }
+    .step2Step div.col-md-12{
+        margin-right: -15px;
+        width: 100%;
+        padding-right: 0;
+    }
+}
+@media screen and (max-width: 425px) {
+    .col-md-4 .logoLine img{
+        width: 40%
+    }
+    .mapId{
+        float: right;
+        margin-top: 10px;
+    }
+    .mainPart {
+        padding-top: 120px;
+    }
+    .breadcrumb{
+        display: none;
+    }
+    .mainPart .container .containerWapper h1 {
+        margin-top: 10%;
+    }
+    .step2Step .form-group{
+        width: 87%;
+        height: 40px;
+        margin-bottom: 5px;
+    }
+    .step2Step .sLabel{
+        width: 5%;
+        padding: 6px 0;
+    }
+    .introcouPhone .form-control{
+        margin-top: 0;
+    }
+    .mycasePart{
+        padding-top: 50px;
+    }
+    .topBar .col-md-3{
+        width: 40%;
+        padding: 8px 0 5px;
+    }
+    .topBar .col-md-3 img{
+        width: 100%;
+    }
+    .topBar .col-md-9{
+        width: 60%;
+    }
+    .mainNav{
+        padding-bottom: 13px;
+    }
+    .space20{
+        margin: 20px 0;
+        padding: 0;
+    }
+    .col-md-9 ul.mainNav li:first-child{
+        margin-top: 10px;
+    }
+    .step2Step{
+        margin-top: 30px;
+    }
+    .caseBox ul{
+        padding-left: 5px;
+    }
+    .writeInfoText .listTitle td span{
+        display: block;
+        margin: 3px 0;
+    }
+    .writeInfoText .listTitle td:nth-child(2){
+        display: none;
+    }
+    .tableBox td{
+        display: block;
+    }
+    .btnNext button{
+        display: block;
+        float: left;
+    }
+    .lawyer2button{
+        margin: 0;
+        padding: 0;
+    }
+    .mybox .btnSearch button{
+        margin: 0 27px;
+    }
+    footer .list-group{
+        padding: 0 30px;
+    }
+    .empty {
+        margin: 10em 0 0;
+    }
+    .lawsuit-content h3.heading{
+        padding: 0 0 20px;
+    }
+    .lawsuit-content {
+        padding-bottom: 7em;
+    }
+    .feed .box1 {
+        width: 260px;
+    }
+    .btnNext button.haveA {
+        margin-left: 20%;
+    }
+    .mainNav a {
+        padding: .5rem .25rem;
+    }
+    .signupBox {
+        width: 100%;
+    }
+    .step2Step {
+        margin: 20px 15px 90px;
+    }
+    .containerWapper {
+        padding: 80px 0 95px;
+    }
+    .containerWapper div{
+        margin-left: 0!important;
+        margin-right: 0!important;
+    }
+    .containerWapper p{
+        color: #fff;
+    }
+    .answer-quiz {
+        min-width: inherit;
+    }
+    .img-lawywerSign .lawsuit-content a {
+        margin: 10px 0px;
+    }
+}
+
+
