--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step4.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step4.html
@@ -163,7 +163,7 @@
 	            url: '/public/case',
 	            data: JSON.stringify({
 	                "caseType": "1",
-	                "expiredDate": $("#expiredDate").val(),
+	                "expiredDate": stringToDate($("#expiredDate").val()),
 	                "comments": $("#freeComments").val()
 	            }),
 	            contentType: "application/json; charset=utf-8",
@@ -175,6 +175,11 @@
 	            }
 	        });
 	    })
+	    
+	    function stringToDate (fDate) {
+		    var fullDate = fDate.split("-");  
+		    return new Date(fullDate[0], fullDate[1]-1, fullDate[2], 0, 0, 0);  
+		}
 	})
 	/*]]>*/
 	</script>
