--- a/fxs-platform-web/src/main/resources/templates/invalidSession.html
+++ b/fxs-platform-web/src/main/resources/templates/invalidSession.html
@@ -1,55 +1,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
- <head>
-   <title>上海小帅信息科技有限公司</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-      <!-- 引入 Bootstrap -->
-      <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="css/header.css" />
-      <link rel="stylesheet" type="text/css" href="css/footer.css" />
-     <link rel="stylesheet" type="text/css" href="css/customer.css" />
-     <link rel="stylesheet" type="text/css" href="css/css.css" />
- </head>
-  <body class="loginBGWhite">
-  <div class="login-header">
-    &nbsp;
-  </div>
-<div class="container">
-
-  <div class="row loginWapper">
-    <div class="col-md-7">
-      <div class="login-logo">
-        <img src="img/logo.png" />
-      </div>
-      <div class="login-BG">
-        <img src="img/login-bg.jpg" />
-      </div>
-    </div>
-    <div class="col-md-5">
-      <div class="signupBox loginInput" >
-        <div class="row signupTitle"><h3>Session失效</h3></div>
-  
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <span>系统将会在3秒后跳转到首页</span>
-            </div>
-          </div>
-          <div class="form-group row signupTitle row">
-            
-            <div class="col-sm-offset-12 col-sm-12">
-              <button type="submit" class="btn btn-default"><a th:href="@{/}" class='login-loginBTN'>前往首页</a></button>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</div>
-<script type="text/javascript">
-	setInterval(function(){window.location.href = "/"}, 3000);
-</script>
+<head th:replace="fragments/header :: header-css"></head>
+<body>
+	<div class="topBar col-md-12">
+		<div th:replace="fragments/header :: header"></div>
+	</div>
+	<div class="mainPart">
+		<div
+			class="container d-flex align-items-center justify-content-center" style="height: calc(100% - 163px)">
+			<div class="alert alert-danger text-center p-5 mb-0" role="alert">
+				<h2>
+					<i class="fa fa-meh-o fa-4x" aria-hidden="true"></i>
+				</h2>
+				<h4 class="">你的session已失效</h4>
+				<h6 class="">
+					系统将在<span class="session-value">5</span>秒后返回登陆页面
+				</h6>
+				<h6 class="">
+					<a class="alert-link" th:href="@{/user/signIn}">重新登陆</a>
+				</h6>
+			</div>
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer"></div>
+	<script type="text/javascript">
+		setInterval(function() {
+			window.location.href = "/user/signIn"
+		}, 5000);
+	</script>
 </body>
-
-
 </html>
