--- a/fxs-platform-web/src/main/resources/static/css/css.css
+++ b/fxs-platform-web/src/main/resources/static/css/css.css
@@ -778,9 +778,6 @@ footer .list-group li{ line-height:20px;}
         margin: 0;
         padding: 0;
     }
-    .mybox .btnSearch button{
-        margin: 0 27px;
-    }
     footer .list-group{
         padding: 0 30px;
     }
@@ -815,14 +812,42 @@ footer .list-group li{ line-height:20px;}
         margin-left: 0!important;
         margin-right: 0!important;
     }
-    .containerWapper p{
-        color: #fff;
-    }
     .answer-quiz {
         min-width: inherit;
     }
     .img-lawywerSign .lawsuit-content a {
         margin: 10px 0px;
+    }
+    .headerRight{
+        padding-left: 0;
+        padding-right: 0;
+    }
+    footer{
+        padding: 5px 0;
+        font-size: 10px;
+    }
+    footer .list-group li {
+        line-height: 15px;
+    }
+    .signupTitle {
+        margin: 0.3em 0 0.3em;
+    }
+    .signupBox .form-group {
+        margin-bottom: .1rem;
+    }
+    .page-link{
+        padding: .25rem .25rem;
+    }
+    .page-item.active .page-link {
+        background-color: #716160;
+        border-color: #716160;
+    }
+    .writeInfo.space20>.row>div{
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .writeInfo .row .writeInfoText {
+        padding: 20px 15px;
     }
 }
 
