--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
@@ -15,7 +15,7 @@
 				</div>
 
 				<div class="video">
-					<video id="myVideo" width="520" height="276" controls="controls" autoplay="autoplay">
+					<video id="myVideo" width="100%" height="276" controls="controls" autoplay="autoplay">
 						<source src="http://www.w3school.com.cn/i/movie.ogg" type="video/ogg" />
 						<source src="http://www.w3school.com.cn/i/movie.mp4" type="video/mp4" />
 						Your browser does not support HTML5 video.
