--- a/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
@@ -104,10 +104,20 @@
 								</div>
 								<div class="row" 
 									th:if="${not #lists.isEmpty(caseDetailInfo.qaMapping)}"
-									th:each="qaMapping : ${caseDetailInfo.qaMapping}">
+									th:each="qa : ${caseDetailInfo.qaMapping}">
 									<ul>
-										<li>问题： <span th:text="${qaMapping.questionDesc}"></span></li>
-										<li>选项： <span th:text="${qaMapping.answerDesc}"></span></li>
+										<li th:if="${qa.answers eq null}">
+					                		<span>问题:</span><span th:text="${qa.questionDesc}"></span>
+					                		<br />
+					                		<span>答案:</span><span th:text="${qa.answerDesc}"></span>
+					                	</li>
+					                	<li th:if="${qa.answers ne null}">
+					                		<span>问题:</span><span th:text="${qa.questionDesc}"></span>
+					                		<br />
+					                		<span th:each="multiQA,iterState : ${qa.answers}">
+					                			<span th:text="'答案' + ${iterState.count} + ':'"></span><span th:text="${multiQA.description}"></span><br />
+					                		</span>
+					                	</li>
 									</ul>
 								</div>
 							</ul>
