修改页面内容和样式

--- a/fxs-platform-web/src/main/resources/static/css/css.css
+++ b/fxs-platform-web/src/main/resources/static/css/css.css
@@ -172,6 +172,12 @@ h4.gray {
     border-radius: 5px;
     border: 1px solid #fff;
 }
+.introBox{
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #fff;
+}
 .signupBox .form-group{
     margin-bottom: .3rem;
 }
