--- a/fxs-platform-web/src/main/resources/templates/fragments/admin-header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/admin-header.html
@@ -23,7 +23,7 @@
 			<a class="nav-link" href="/user/dashboard">个人中心</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#" target="_self">关于我们</a>
+			<a class="nav-link" href="/companyIntro">公司简介</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="/signOut">登出</a>
