--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free.html
@@ -11,7 +11,7 @@
 			<div class="containerWapper">
 				<div class="text-center">
 					<h1>免费法律咨询</h1>
-					<p>请先选择咨询类型，以便为您精准解答</p>
+					<p>请先选择案件类型，以便为您精准解答</p>
 				</div>
 				<section class="col-md-12 col-sm-12 introcouPhone counseling_free">
 					<div class="row">
