--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step1.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step1.html
@@ -13,7 +13,7 @@
 					<li><a href="#">免费法律咨询</a></li>
 					<li class="active">选择类型</li>
 				</ol>
-				<h1 class="blue step1">请选择下一级咨询类型</h1>
+				<h1 class="blue step1">请选择二级案件类型</h1>
 				<section class="col-md-12 col-sm-12 introcouPhone marginTop30">
 					<div class="row">
 						<ul class="col-md-6 col-sm-12" th:each="subFalltypus : ${subFalltypusList}">
