--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step3.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step3.html
@@ -19,25 +19,24 @@
 					<div class="row">
 						<div class="col-md-10 col-sm-10">
 							<ul class="writeInfoText ulCell">
-								<li class="orange">请清晰描述事件，再提出法律问题，以便于我们提供优质解答。</li>
+								<li class="orange">清晰的描述整个事件，我们才能提供优质的法律解答。</li>
 								<li>
 									请详细描述事件的时间、地点、人物、过程、结果、争议的焦点等重要信息，并明确提出您的需求，如“怎么办”、“如何维权”、“怎么处理”、“是否可以要求赔偿”等
-									—— <span>提示：请将鼠标移动到蓝色文字上查看解读</span>
 								</li>
 								<li>
 									<ul class="exp">
 										<li class="fl">婚姻示例</li>
 										<li class="fr">我们结婚四年多， <span class="clr-blue">结婚后
-												，我的父母</span> 几乎全款买的房子 。150万的房子， <span class="clr-blue">女方</span>
-											承担12万 。产证上只写 <span class="clr-blue">我和妻子</span> 的名字 。 <span
+												，我的父母</span> 全款买的房子 。450万的房子， <span class="clr-blue">女方</span>
+											承担50万 。产证上只写 <span class="clr-blue">我和妻子</span> 的名字 。 <span
 											class="clr-blue">现在要离婚，女方要求要我一半的房产，能分到吗？</span>
 										</li>
 										<li class="clearboth"></li>
 									</ul>
 									<ul class="exp expLast">
 										<li class="fl">劳动示例</li>
-										<li class="fr">我在 <span class="clr-blue">东莞市一个小电子厂</span>
-											上班， <span class="clr-blue">上个月自动离职了，还有差不多一个月半工资没结，</span>
+										<li class="fr">我在 <span class="clr-blue">上海市一家代工工厂</span>
+											上班， <span class="clr-blue">上个月自动离职了，有差不多一个月工资没有结，后来也没发给过我，</span>
 											老板说自动离职一毛钱都没有， <span class="clr-blue">请问自动离职是不是没有工资？</span>
 										</li>
 										<li class="clearboth"></li>
@@ -68,9 +67,12 @@
 						<div class="col-md-2 col-sm-2 px-0">
 							<div class="writeInfoRight ulCell">
 								<ul class="writeInfoRightTitle">
-									<li>电话咨询</li>
+									<li>人工智能法律分析</li>
 								</ul>
 								<ul class="writeInfoRightItem">
+									<li>集合上万律师之经验</li>
+									<li>集合百万判决书结果</li>
+									<li>大数据精准分析</li>
 									<li>立即响应</li>
 									<li>专业</li>
 									<li>高性价比</li>
