--- a/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
@@ -9,8 +9,8 @@
 	<div class="mainPart">
 		<div class="container">
 			<div class="text-center">
-				<h1>电话咨询</h1>
-				<p>优选专家律师与您电话沟通，为您深度分析法律问题，提供权威解决方案，排疑解惑。</p>
+				<h1>电话预约咨询</h1>
+				<p>后台会通过大数据精准分析 ，优选专家律师提供解决方案。</p>
 			</div>
 			<section class="col-md-12 col-sm-12 introcouPhone">
 				<div class="row">
@@ -18,14 +18,14 @@
 						<ul class="introcoupCell">
 							<li><img th:src="@{/img/icon_counseling1.png}" /></li>
 							<li><span>立即响应</span></li>
-							<li class="ft12">专属律师，一打就通，立即获取法律服务</li>
+							<li class="ft12">预约时间内，大数据精准匹配， 专属律师会立刻响应</li>
 						</ul>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<ul class="introcoupCell">
 							<li><img th:src="@{/img/icon_counseling2.png}" /></li>
 							<li><span>专业</span></li>
-							<li class="ft12">优选律师，为您提供透彻的分析、有价值的纠纷解决方案</li>
+							<li class="ft12">为您提供透彻的分析、有价值的纠纷解决方案</li>
 						</ul>
 					</div>
 					<div class="col-md-3 col-sm-6">
@@ -39,7 +39,7 @@
 						<ul class="introcoupCell">
 							<li><img th:src="@{/img/icon_counseling4.png}" /></li>
 							<li><span>服务细节到位</span></li>
-							<li class="ft12">全程通话录音、服务结束为您提供纠纷解决方案，帮您理顺思路，服务不满意，立即退费</li>
+							<li class="ft12">全程通话录音，为您提供解决方案</li>
 
 						</ul>
 					</div>
