--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer.html
@@ -7,8 +7,8 @@
 		<div th:replace="fragments/header :: header" ></div>
 		<div class="container">
 	      <div class="col-md-12 lawsuit-content" >
-	        <h3 class="heading">竞标找律师</h3>
-	        <p >律师好不好，比一比就知道</p>
+	        <h3 class="heading">自己选律师</h3>
+	        <p >律师好不好，一看就知道</p>
 	        <a th:href="@{/public/case/lawsuit/start}" class="create-an-account" >开始找律师打官司</a>
 	      </div>
     	</div>
