--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
@@ -13,7 +13,7 @@
 					<li><a href="#">免费法律咨询</a></li>
 					<li class="active">填写纠纷基本信息</li>
 				</ol>
-				<h1 class="blue step1">填写纠纷基本信息</h1>
+				<h1 class="blue step1">填写基本信息</h1>
 				<section class="step2Step introcouPhone sBtn" id="disputeInfo">
 					<div th:if="${question.question ne null}">
 						<h3 class="space10" th:text="${question.question.description}"></h3>
@@ -31,7 +31,7 @@
 					<div id="nextQuestionContainer">
 					
 					</div>
-					<h3 class="space10">您家人的纠纷对象住所地在哪里？</h3>
+					<h3 class="space10">您纠纷的所地在哪里？</h3>
 					<h4 class="gray">
 						提示：如纠纷对象为个人，请填写纠纷对象的长期住所地，如纠纷对象为企业，请填写企业经营地点或者注册地点。如以上地点均无法获知，请填写纠纷发生地点。
 					</h4>
