--- a/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
@@ -10,19 +10,19 @@
 		<div class="container">
 			<div class="containerWapper">
 				<h1 class="blue">咨询池</h1>
-				<p class="orange">这里呈现的是您的法律意见已通过评审、但客户尚未委托的案件。</p>
+				<p class="orange"></p>
 				<section class="col-md-12 col-sm-12 writeInfo space20 px-0">
 					<div class="row">
 						<div class="col-md-4 col-sm-12">
 							<div class="ulCell laywer_right">
 								<ul class="nav nav-tabs" role="tablist" id="tablist">
 									<li role="presentation" class="active">
-										<a th:href="@{/lawyer/case_pool(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}" role="tab">免费法律咨询 
+										<a th:href="@{/lawyer/case_pool(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}" role="tab">免费法律咨询的咨询表单
 											<span>(</span><span class="value"></span><span>)</span>
 										</a>
 									</li>
 									<li role="presentation" class="">
-										<a href="#" role="tab" id="getReservation">电话咨询</a></li>
+										<a href="#" role="tab" id="getReservation">电话预约咨询</a></li>
 								</ul>
 							</div>
 						</div>
