--- a/fxs-platform-web/src/main/resources/templates/lawyer_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_dashboard.html
@@ -9,19 +9,19 @@
 	<div class="mainPart mycasePart">
 		<div class="container">
 			<div class="containerWapper">
-				<h1 class="blue">我的竞标案件</h1>
+				<h1 class="blue">我的委托案件</h1>
 				<section class="col-md-12 col-sm-12 writeInfo space20">
 					<div class="row">
 						<div class="col-md-3 col-sm-3">
 							<div class="ulCell laywer_right">
 								<ul class="nav nav-tabs" role="tablist" id="tablist">
 									<li role="presentation" th:class="((${session.CASE_DATASET_WITH_FILTER_CONDITION eq null}) or (${session.CASE_DATASET_WITH_FILTER_CONDITION ne null} and ${session.CASE_DATASET_WITH_FILTER_CONDITION.status ne null} and ${session.CASE_DATASET_WITH_FILTER_CONDITION.status[0] eq '0'})) ? 'active' : ''">
-										<a th:href="@{/user/dashboard(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}" role="tab">待加入的竞标 
+										<a th:href="@{/user/dashboard(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}" role="tab">待加入委托的案件
 											<span>(</span><span class="value" th:text="${totalNonBiddingCases}"></span><span>)</span>
 										</a>
 									</li>
 									<li role="presentation" th:class="((${session.CASE_DATASET_WITH_FILTER_CONDITION ne null} and ${session.CASE_DATASET_WITH_FILTER_CONDITION.status ne null} and ${session.CASE_DATASET_WITH_FILTER_CONDITION.status[0] eq '4'})) ? 'active' : ''">
-										<a href="#" role="tab" id="getBiddingCases">已加入的竞标
+										<a href="#" role="tab" id="getBiddingCases">已委托的案件
 										<span>(</span><span class="value" th:text="${totalBiddingCases}"></span><span>)</span>
 										</a>
 									</li>
@@ -33,7 +33,7 @@
 								<ul class="writeInfoText ulCell myCell">
 									<div class="row">
 										<div class="form-group col-md-3 col-sm-3 sLabelOne">
-											<label>业务领域:</label>
+											<label>案件类型:</label>
 										</div>
 										<div class="scroll-y scroll-y-80">
 											<ul class="form-group sLabelOneUl">
@@ -73,7 +73,7 @@
 										<span th:text="${myBidCase.parentType}"></span>
 									</li>
 									<li>
-										<span>竞标发布时间</span>
+										<span>案件发布时间</span>
 										<span th:text="${myBidCase.createAt}"></span>
 									</li>
 									<li>
@@ -81,7 +81,7 @@
 										<span th:text="${myBidCase.expiredDate eq null ? 'NA' : myBidCase.expiredDate}"></span>
 									</li>
 									<li>
-										<span>加入竞标人数：</span>
+										<span>加入投标人数：</span>
 										<span th:text="较少"></span>
 									</li>
 									<div class="row">
